# Enterprise_Doc_MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
client/: llm_equation_regions.py  mark_equation_bboxes.py  ocr_equation_regions.py  reconstruct_math_pdf.py  reconstruct_page.py  reconstruct_pdf.py  test_client.py  test_remote.py
deploy/: start_http.py
mcp_server/: kb.py  server.py
pipeline/: chunk.py  clean.py  embed.py  equation_regions.py  extract_pdf.py  extract_pptx.py  generate_docs.py  merge_equations.py  models.py  run_pipeline.py
tests/: test_equation_merge.py  test_mcp_client.py  test_queries.json  test_retrieval.py
